# minichess-ai

./: .gitignore  README.md  TODO.md  experiments.sh  main.py  plot_datagen_log.py  plot_datagen_stats.py  pyproject.toml  referencias.bib  run_gen.sh  setup.fish.sh
doc/: TIL.md  docs.tex  referencias.bib  tfg_tipo_2.md
src/benchmarks/: benchmark_dataset_size.py  plot_overlapped.py
src/chess/: agentVSagent.py  arena.py  basic.py  env.py  evaluate_tournament.py  gameVisualizer.html  outputs_pgn.py  play.py  visualizer.py
src/chess/agents/: __init__.py  base.py  heuristic.py  historical.py  mlp.py  random.py  transformer.py
src/chess/tests/: test_minichess_env.py  test_pyffish_rules.py
src/dataUtils/: convert.sh  create_static_splits.py  merge_datasets_bin.py  plot_datagen_stats.py  run_gen.sh  stats.sh
src/evalsAndTournaments/: evaluate_all_checkpoints.py  run_agent_tournament.py  run_statistical_tests.py
src/experiment_scripts/: experiments.sh  h2_ablation_seeds.sh  h2_big.sh  h2_mlp_baseline.sh  h2_small.sh  run_optuna_tuning.py  test.sh
src/models/: README.md  TransformetEncoder.py  baseline.py  benchmark_dataloader.py  dataloaders.py  dataset_parser.py  fnnBaseline.py  fnnPromotionMasking.py  randomBaseline.py  train_transformer.py  transformerEncoder.py
src/ppo/: ppo.py  run_hypothesis3_experiments.py  run_ppo_experiments.sh  test_ppo.py  train_ppo.py
src/training/: config.py  logger.py  logging.py  train_transformer.py  utils.py
src/utils/: create_static_splits.py  torch2mermaid.py  utils.py
(+2 files in other folders)
