[project]
name = "minichess-with-deep-learning"
version = "0.1.0"
description = "TFG"   
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "psutil>=6.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "nvidia-ml-py>=12.570.86",
    "torch>=2.10.0",
    "tensorboard>=2.17.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "setuptools<81.0.0",
    "pyffish>=0.0.88",
    "pytest>=9.1.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
search-path = ["."]
disable-search-path-heuristics = true
disable-type-errors-in-ide = true
